# GG_Diagram

./: .gitignore  CMakeLists.txt  ESP32_RC_CAR_BLE.ino  GG_Diagram.html  GG_Diagram.txt  README.md  imgui.ini
docs/: esp32_data_pipeline.md  hardware_test_checklist.md  vio_integration_plan.md
firmware/: ESP32_CAM_PPS_Logger.ino  esp32_log_format.h
gui/: GuiApplication.cpp  GuiApplication.hpp  SimulationPipeline.cpp  SimulationPipeline.hpp
include/: analytics.hpp  attitude_estimator.hpp  data_types.hpp  gg_envelope.hpp  gg_processor.hpp  math_utils.hpp  quasi_steady_state_filter.hpp
src/: analytics.cpp  attitude_estimator.cpp  gg_envelope.cpp  gg_processor.cpp  main.cpp  pipeline_cli.cpp  quasi_steady_state_filter.cpp
tools/: decode_esp32_log.py  export_csv.py  generate_report.py  run_pipeline.py  session_cli.py
tools/pipeline/: __init__.py  ingest.py  log_reader.py  monte_carlo.py
tools/pipeline/config/: openvins_config.yaml
vision/: dataset.cpp  dataset.hpp  vio_stub.cpp  vio_stub.hpp
